--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DuSofi</title>
+    <meta name="description" content="Discover philosophical wisdom from history's greatest thinkers." />
+    <meta name="keywords" content="philosophy, philosophers, wisdom, quotes, ideologies" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://dusofi.lt/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="DuSofi - Explore Philosophy &amp; Wisdom" />
+    <meta property="og:description" content="Discover philosophical wisdom from history's greatest thinkers." />
+    <meta property="og:url" content="https://dusofi.lt/" />
+    <meta property="og:image" content="https://dusofi.lt/images/og-dusofi-philosophy.jpg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="DuSofi - Explore Philosophy &amp; Wisdom" />
+    <meta name="twitter:description" content="Discover philosophical wisdom from history's greatest thinkers." />
+    <meta name="twitter:image" content="https://dusofi.lt/images/og-dusofi-philosophy.jpg" />
+    <title>DuSofi - Explore Philosophy &amp; Wisdom</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500;700&display=swap" rel="stylesheet">
   </head>
