--- a/index.html
+++ b/index.html
@@ -7,16 +7,23 @@
     <meta name="description" content="Discover philosophical wisdom from history's greatest thinkers." />
     <meta name="keywords" content="philosophy, philosophers, wisdom, quotes, ideologies" />
     <meta name="robots" content="index, follow" />
+    <meta name="author" content="DuSofi Team" />
+    <meta name="theme-color" content="#be185d" />
     <link rel="canonical" href="https://dusofi.lt/" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="DuSofi - Explore Philosophy &amp; Wisdom" />
     <meta property="og:description" content="Discover philosophical wisdom from history's greatest thinkers." />
     <meta property="og:url" content="https://dusofi.lt/" />
     <meta property="og:image" content="https://dusofi.lt/images/og-dusofi-philosophy.jpg" />
+    <meta property="og:site_name" content="DuSofi - Philosophy &amp; Wisdom" />
+    <meta property="og:locale" content="en_US" />
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@DuSofi" />
+    <meta name="twitter:creator" content="@DuSofi" />
     <meta name="twitter:title" content="DuSofi - Explore Philosophy &amp; Wisdom" />
     <meta name="twitter:description" content="Discover philosophical wisdom from history's greatest thinkers." />
     <meta name="twitter:image" content="https://dusofi.lt/images/og-dusofi-philosophy.jpg" />
+    <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
     <title>DuSofi - Explore Philosophy &amp; Wisdom</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@500;700&display=swap" rel="stylesheet">
