chore: rename logo images for SEO

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="DuSofi - Explore Philosophy &amp; Wisdom" />
     <meta property="og:description" content="Discover philosophical wisdom from history's greatest thinkers." />
     <meta property="og:url" content="https://dusofi.lt/" />
-    <meta property="og:image" content="https://dusofi.lt/images/og-dusofi-philosophy.jpg" />
+    <meta property="og:image" content="https://dusofi.lt/images/og-dusofi-philosophy.png" />
     <meta property="og:site_name" content="DuSofi - Philosophy &amp; Wisdom" />
     <meta property="og:locale" content="en_US" />
     <meta name="twitter:card" content="summary_large_image" />
@@ -22,7 +22,7 @@
     <meta name="twitter:creator" content="@DuSofi" />
     <meta name="twitter:title" content="DuSofi - Explore Philosophy &amp; Wisdom" />
     <meta name="twitter:description" content="Discover philosophical wisdom from history's greatest thinkers." />
-    <meta name="twitter:image" content="https://dusofi.lt/images/og-dusofi-philosophy.jpg" />
+    <meta name="twitter:image" content="https://dusofi.lt/images/og-dusofi-philosophy.png" />
     <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
     <title>DuSofi - Explore Philosophy &amp; Wisdom</title>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
