feat: enhance seo with hreflang

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <meta property="og:image" content="https://dusofi.lt/images/og-dusofi-philosophy.png" />
     <meta property="og:site_name" content="DuSofi - Philosophy &amp; Wisdom" />
     <meta property="og:locale" content="en_US" />
+    <meta property="og:locale:alternate" content="lt_LT" />
+    <link rel="alternate" href="https://dusofi.lt/" hreflang="en" />
+    <link rel="alternate" href="https://dusofi.lt/lt/" hreflang="lt" />
+    <link rel="alternate" href="https://dusofi.lt/" hreflang="x-default" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@DuSofi" />
     <meta name="twitter:creator" content="@DuSofi" />
